--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
          <div class="contactInfo">
-           <h1>Shearable Link Resume Builder <br> By Ummay Kulsoom</h1>
+           <h1> Resume Builder <br> By Ummay Kulsoom</h1>
         <form id="resumeform">
           <fieldset>
             <legend> Personal Information </legend>
